<resources>
    <string name="app_name">Kayam School</string>
    <string name="tools_activity_title">Kitkit School Tools</string>
    <string name="user_default_id">user0</string>
    <string name="launcher_title">Kayam School</string>
    <string name="btn_setting">Settings</string>
    <string name="btn_credit">Credit</string>
    <string name="about_activity_title">About</string>
    <string name="enuma_info">Enuma, Inc.\nhttp://enuma.com\nxpsupport@enuma.com</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="go_setting">Go to Android Settings</string>
    <string name="enter_password">Enter password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="start">Start</string>
    <string name="defaultLanguage">en-US</string>
    <string name="library">Library</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_back">Back</string>
    <string name="exit_admin_mode">Exit Admin</string>
    <string name="tools">Tools</string>
    <string name="btn_upload">Upload logs</string>
    <string name="btn_clear_appdata">Clear app data</string>
    <string name="setting_activity_title">Settings</string>
    <string name="btn_pretest">Pre-test</string>
    <string name="btn_posttest">Post-test</string>
    <string name="select_language">Select language</string>
    <string name="btn_changeLanguage">Change language</string>
    <string name="select_user">Select user</string>
    <string name="unlock_all">Unlock all</string>
    <string name="add_100_stars">Add 100 coins</string>
    <string name="add_1000_stars">Add 1000 coins</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="review_mode">Review Mode</string>
    <string name="sign_language_mode">Sign Language Mode</string>
    <string name="btn_administration">Administration</string>
    <string name="tablet_number">Tablet number</string>
    <string name="user_name">User name</string>
    <string name="administration_activity_title">Administration</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel2">CANCEL</string>
    <string name="enter">ENTER</string>
    <string name="number">number</string>
    <string name="drums">Drums</string>
    <string name="marimba">Xylophone</string>
    <string name="drawing">Drawing</string>
    <string name="coloring">Coloring</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="blackboard">Blackboard</string>
    <string name="fish_bowl">Sea World</string>
    <string name="writing_board">Writing Board</string>
    <string name="select_user_no">Select user number</string>
    <string name="select_tablet_no">Select tablet number</string>
    <string name="user_no">User No.</string>
    <string name="name">name</string>
    <string name="username_activity_title">User name</string>
    <string name="username_list">[ User name list ]</string>
    <string name="rename">Rename</string>
    <string name="login">Login</string>
    <string name="select_icon_password">Select your icon password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name_hint">Name</string>
    <string name="create">CREATE</string>
    <string name="welcome">Welcome back, %s</string>
    <string name="csv_generated">CSV file is generated: %s</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="logout">Logout</string>
    <string name="create_user_empty_name_error">Name cannot be empty</string>
    <string name="create_user_admin_name_error">Name is disallowed</string>
    <string name="create_user_same_name_error">Cannot create another user of the same name</string>
    <string name="create_user_empty_password_error">Password cannot be empty</string>
    <string name="create_user_incomplete_password_error">Password is incomplete</string>
    <string name="privacy_policy_malay_title">Dasar Privasi untuk Kayam School</string>
    <string name="privacy_policy_malay">Di Kayam School, kami komited untuk melindungi privasi kanak-kanak dan memastikan persekitaran pembelajaran mereka yang selamat. Dasar Privasi ini menggariskan maklumat yang kami kumpulkan, cara penggunaannya, dan langkah-langkah perlindungan yang kami laksanakan.
\n
\n1. Maklumat Yang Kami Kumpul:
\n
\na. Maklumat Akaun Pengguna: Guru bertanggungjawab untuk mencipta akaun pelajar, menyediakan maklumat asas seperti nama kanak-kanak, umur, dan kelas.
\n
\nb. Data Kemajuan: Aplikasi secara berkala mengumpul maklumat mengenai kemajuan kanak-kanak dalam aktiviti literasi dan numerasi. Ini termasuk markah, kadar penyelesaian, dan sebarang cabaran yang dihadapi semasa proses pembelajaran.
\n
\nc. Data Penggunaan: Kami mengumpul maklumat tentang bagaimana aplikasi digunakan, termasuk corak navigasi, masa yang dihabiskan dalam aktiviti tertentu, dan penglibatan keseluruhan.
\n
\n2. Bagaimana Kami Menggunakan Maklumat:
\n
\na. Peribadahan: Data yang dikumpulkan digunakan untuk menyesuaikan pengalaman pembelajaran mengikut keperluan setiap kanak-kanak, menyediakan cadangan dan cabaran yang disesuaikan.
\n
\nb. Peningkatan Perkhidmatan: Kami menganalisis data yang dikumpulkan secara agregat untuk meningkatkan kandungan aplikasi, ciri-ciri, dan prestasi keseluruhan, memastikan pengalaman pembelajaran yang lebih baik untuk pengguna kami.
\n
\nc. Komunikasi: Kami mungkin menggunakan maklumat hubungan yang diberikan untuk berkomunikasi dengan guru atau pentadbir sekolah mengenai kemajuan keseluruhan pelajar, pencapaian, atau kemas kini aplikasi yang berkaitan.
\n
\n3. Keselamatan Data:
\n
\na. Kawalan Akses: Hanya kakitangan sekolah yang dibenarkan mempunyai akses kepada data pengguna, dan kawalan akses yang ketat dikenakan untuk memastikan kerahsiaannya.
\n
\nb. Anonimisasi: Sebarang data yang dikongsi secara luar untuk tujuan analisis atau peningkatan adalah dianonimkan, mengelakkan pengenalan individu pengguna.
\n
\n4. Kawalan Ibu Bapa:
\n
\na. Tanggungjawab Guru: Guru, sebagai pencipta akaun, bertanggungjawab untuk mendapatkan persetujuan ibu bapa yang diperlukan dan memastikan pematuhan dengan peraturan privasi yang berkaitan.
\n
\nb. Permintaan Akses dan Padam: Ibu bapa atau penjaga boleh meminta akses kepada data anak mereka atau memintanya dipadam dengan menghubungi pentadbiran sekolah.
\n
\n5. Perkhidmatan Pihak Ketiga:
\n
\na. Tiada Iklan: Kami tidak membenarkan pengiklanan pihak ketiga dalam aplikasi kami untuk mengekalkan persekitaran mesra kanak-kanak.
\n
\nb. Kemitraan Ketat: Sebarang perkhidmatan pihak ketiga yang terlibat mematuhi standard privasi dan keselamatan yang ketat.
\n
\n6. Perubahan kepada Dasar Privasi:
\n
\nKami berhak untuk mengemaskini Dasar Privasi ini untuk mencerminkan perubahan dalam amalan kami. Pengguna akan dimaklumkan tentang sebarang kemaskini yang signifikan.
\n
\nDengan menggunakan aplikasi kami, anda bersetuju dengan terma yang diterangkan dalam Dasar Privasi ini. Untuk sebarang pertanyaan atau kebimbangan, sila hubungi pasukan sokongan kami di enquiry@chumbaka.asia.
\n
\nTarikh Kemaskini Terakhir: 9 Mac 2024
\n
\nKayam School tetap komited untuk menyediakan platform pembelajaran yang selamat dan berkesan untuk kanak-kanak, dan kami menghargai kepercayaan anda kepada kami.
    </string>
    <string name="privacy_policy_english_title">Privacy Policy for Kayam School</string>
    <string name="privacy_policy_english">At Kayam School, we are dedicated to safeguarding the privacy of children and ensuring a secure environment for their learning. This Privacy Policy outlines the information we collect, how it is utilised, and the protective measures we have in place.
\n
\n1. Information We Collect:
\na. User Account Information: Teachers are responsible for creating student accounts, providing basic information such as the child\'s name, age, and class.
\n
\nb. Progress Data: The app periodically collects information on the child\'s progress in literacy and numeracy activities. This includes scores, completion rates, and any challenges faced during the learning process.
\n
\nc. Usage Data: We gather information on how the app is used, including navigation patterns, time spent on specific activities, and overall engagement.
\n
\n2. How We Use the Information:
\na. Personalisation: The collected data is used to tailor the learning experience to each child\'s needs, providing customised recommendations and challenges.
\n
\nb. Improvement of Services: We analyse aggregated data to enhance our app\'s content, features, and overall performance, ensuring a better learning experience for our users.
\n
\nc. Communication: We may use the provided contact information to communicate with teachers or school administrators about overall student progress, achievements, or relevant app updates.
\n
\n3. Data Security:
\na. Access Control: Only authorised school personnel have access to user data, and strict access controls are implemented to ensure its confidentiality.
\n
\nb. Anonymisation: Any data shared externally for analysis or improvement purposes is anonymised, preventing the identification of individual users.
\n
\n4. Parental Controls:
\na. Teacher Responsibility: Teachers, as account creators, are responsible for obtaining any necessary parental consent and ensuring compliance with relevant privacy regulations.
\n
\nb. Access and Deletion Requests: Parents or guardians can request access to their child\'s data or its deletion by contacting the school administration.
\n
\n5. Third-Party Services:
\na. No Advertising: We do not allow third-party advertising in our app to maintain a child-friendly environment.
\n
\nb. Strict Partnerships: Any third-party services involved comply with strict privacy and security standards.
\n
\n6. Changes to Privacy Policy:
\nWe reserve the right to update this Privacy Policy to reflect changes in our practices. Users will be notified of any significant updates.
\n
\nBy using our app, you agree to the terms outlined in this Privacy Policy. For any questions or concerns, please contact our support team at enquiry@chumbaka.asia.
\n
\nLast Updated: 9th March 2024
\n
\nKayam School remains committed to providing a safe and effective learning platform for children, and we appreciate your trust in us.
</string>
    <string name="credits_button">Credits</string>
    <string name="credits_button_bm">Kredit</string>
    <string name="credits_english_title">Credits and Open-Source Notice</string>
    <string name="credits_english">Kayam School App is adopted and maintained by Chumbaka, using software and materials adapted from the open-source Kitkit School project originally created by Enuma, Inc.
\n
\nCopyright 2018 Enuma, Inc.
\nLicensed under the Apache License 2.0 and the Creative Commons Attribution 4.0 International License.
\n
\nChumbaka has modified, localised, and adapted the app for learning implementation, including adaptations for Bahasa Melayu and Mathematics in Bahasa Melayu. These adaptations were prepared with support from AI tools and input from teachers and officers from PPD Kuching and JPN Sarawak. Chumbaka is responsible for the final review, selection, and implementation of these adaptations.
\n
\nKayam School App is an independent project by Chumbaka. It is not an official Kitkit School or Enuma product, and is not sponsored, endorsed, or maintained by Enuma.
\n
\nThe names “Kitkit School” and “Enuma” are used only for attribution to the original open-source project. All additional localisation, content adaptation, branding, and implementation materials are by Chumbaka, unless otherwise stated.</string>
    <string name="credits_malay_title">Penghargaan dan Notis Sumber Terbuka</string>
</resources>