<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_create_user_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:text="@string/enter_your_name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_create_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/name_hint"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@android:color/darker_gray"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp" />

            <TextView
                android:id="@+id/tv_login_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="24dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:text="@string/select_icon_password"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="12dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/iv_field_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_dotted_square" />

                <ImageView
                    android:id="@+id/iv_field_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_dotted_square" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:columnCount="4"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/iv_image_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_burger" />

                <ImageView
                    android:id="@+id/iv_image_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_car" />

                <ImageView
                    android:id="@+id/iv_image_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_chick" />

                <ImageView
                    android:id="@+id/iv_image_4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_donatello" />

                <ImageView
                    android:id="@+id/iv_image_5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_globe" />

                <ImageView
                    android:id="@+id/iv_image_6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_mushrooms" />

                <ImageView
                    android:id="@+id/iv_image_7"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_penguin" />

                <ImageView
                    android:id="@+id/iv_image_8"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_scooter" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:paddingRight="40dp">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel2"
                    android:textColor="#009688"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:text="@string/create"
                    android:textColor="#009688"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>